--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -11,7 +11,7 @@ get-lease-hostnames true;
 subnet 192.168.1.0 netmask 255.255.255.0 {
  option routers                  192.168.1.1; # lan
  option subnet-mask              255.255.255.0;
- option domain-name              "lab.okd.local";
+ option domain-name              "uit.okd.local";
  option domain-name-servers       192.168.1.210;
  range 192.168.1.150 192.168.1.254;
 }
